# likes-img-bulk-dl-public

./: .gitignore  LICENSE  README.md  pyproject.toml  pyrightconfig.json
src/: crawler.py  db.py  image_downloader.py  main.py  models.py  utils.py
