[tool.poetry]
name = "likes-img-bulk-dl-public"
version = "0.1.0"
description = ""
authors = ["anon"]

[tool.poetry.dependencies]
python = "^3.10"
tweepy = "^4.10.0"
python-dotenv = "^0.20.0"
pydantic = "^1.9.1"
loguru = "^0.6.0"
dataset = "^1.5.2"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
colored-traceback = "^0.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
